--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap w/ Vite</title>
+    <title>Es gibt Gott</title>
     <link rel="stylesheet" href="scss/styles.scss" />
     <link
       rel="stylesheet"
@@ -21,19 +21,15 @@
             href="/"
             class="d-flex align-items-center text-dark text-decoration-none"
           >
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-bootstrap-fill d-inline-block me-2" viewBox="0 0 16 16">
-              <path d="M6.375 7.125V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23H6.375zm0 3.762h1.898c1.184 0 1.81-.48 1.81-1.377 0-.885-.65-1.348-1.886-1.348H6.375v2.725z"/>
-              <path d="M4.002 0a4 4 0 0 0-4 4v8a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4V4a4 4 0 0 0-4-4h-8zm1.06 12V3.545h3.399c1.587 0 2.543.809 2.543 2.11 0 .884-.65 1.675-1.483 1.816v.1c1.143.117 1.904.931 1.904 2.033 0 1.488-1.084 2.396-2.888 2.396H5.062z"/>
-            </svg> -->
             <span>Es gibt Gott</span>
           </a>
         </h1>
-        <a href="#">Impressum</a>
+        <a href="#impressum">Impressum</a>
       </header>
 
       <!-- <div class="row"> -->
       <!-- <h1></h1> -->
-      <div class="col-8 px-0">
+      <div class="col col-lg-8 px-0">
         <p>
           Diese Seite dient dazu dir die Bibel, Gott selbst und Jesus Christus
           bekannt zu machen. Diese Seite ist völlig neutral und kostenlos,
@@ -239,6 +235,7 @@
           geworden. In der nächsten Kurseinheit wollen wir in der Bibel über
           Gott, Jesus Christus und den Heiligen Geist lesen.
         </p>
+        <p>(Fortsetzung folgt)</p>
       </div>
       <!-- <div class="col-8 px-0">
           <img src="img/img-1.jpg" class="rounded float-start img-thumbnail" style="width: 100%; height: auto;"  />
@@ -246,8 +243,15 @@
       <!-- </div> -->
       <hr class="mt-5 mb-4" />
 
-      <p class="text-muted">
-        Created and open sourced by the Bootstrap team. Licensed MIT.
+      <h4 id="impressum">Über uns:</h4>
+
+      <p class="text-muted" style="font-size: small">
+        Das ist ein freies Projekt bibeltreuer Christen, die <u>keiner</u> Organisation
+        angehören und für <u>keine</u> Organisation werben. Wer möchte darf
+        mitarbeiten:
+        <a href="https://github.com/Linsner/es-gibt-gott"
+          >github.com/Linsner/es-gibt-gott</a
+        >
       </p>
     </div>
   </body>
